@@ -4341,12 +4341,12 @@ int main(int argc, char *argv[])
 		exit(1);
 	}
 
-	if (ast_cel_engine_init()) {
+	if (ast_local_init()) {
 		printf("%s", term_quit());
 		exit(1);
 	}
 
-	if (ast_local_init()) {
+	if (ast_cel_engine_init()) {
 		printf("%s", term_quit());
 		exit(1);
 	}
